--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "admin-ui-example",
-  "vendor": "vtex",
+  "name": "assembly-option-admin",
+  "vendor": "vtexbr",
   "version": "0.0.1",
-  "title": "Admin-ui example app",
+  "title": "Assembly Options Functionality inside Admin",
   "description": "",
   "mustUpdateAt": "2022-08-28",
   "scripts": {
