--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "assembly-option-admin",
+  "name": "admin-assembly-options",
   "vendor": "vtexbr",
   "version": "0.0.1",
   "title": "Assembly Options Functionality inside Admin",
