Admin SideBar option and Base Styleguide added

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,9 @@
   "scripts": {
     "postreleasy": "vtex publish"
   },
-  "dependencies": {},
+  "dependencies": {
+    "vtex.styleguide": "9.x"
+  },
   "builders": {
     "react": "3.x",
     "admin": "0.x",
