--- a/react/package.json
+++ b/react/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@vtex/admin-ui": "^0.117.0",
+    "@vtex/styleguide": "^9.145.2",
     "faker": "^5.5.3",
     "react-intl": "^5.21.0"
   }
