--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,7 @@
   "scripts": {
     "postreleasy": "vtex publish"
   },
-  "dependencies": {
-    "vtex.styleguide": "9.x"
-  },
+  "dependencies": {},
   "builders": {
     "react": "3.x",
     "admin": "0.x",
