--- a/package.json
+++ b/package.json
@@ -31,7 +31,5 @@
     "typescript": "^3.8.3",
     "vtex.render-runtime": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.render-runtime@8.131.0/public/@types/vtex.render-runtime"
   },
-  "dependencies": {
-    "react-apollo": "^3.1.5"
-  }
+  "dependencies": {}
 }
