--- a/react/package.json
+++ b/react/package.json
@@ -18,6 +18,7 @@
     "@vtex/styleguide": "^9.145.2",
     "faker": "^5.5.3",
     "formik": "^2.2.9",
+    "react-apollo": "^3.1.5",
     "react-intl": "^5.21.0"
   }
 }
