--- a/react/package.json
+++ b/react/package.json
@@ -19,6 +19,7 @@
     "faker": "^5.5.3",
     "formik": "^2.2.9",
     "react-apollo": "^3.1.5",
-    "react-intl": "^5.21.0"
+    "react-intl": "^5.21.0",
+    "yup": "^0.32.11"
   }
 }
