--- a/react/package.json
+++ b/react/package.json
@@ -5,6 +5,7 @@
     "@types/faker": "^5.5.9",
     "@types/node": "^11.12.1",
     "@types/react": "^16.8.10",
+    "@types/uniqid": "^5.3.2",
     "@vtex/tsconfig": "^0.4.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -13,6 +14,7 @@
     "vtexbr.assembly-options-graphql": "http://vtexbr.vtexassets.com/_v/public/typings/v1/vtexbr.assembly-options-graphql@0.0.1/public/@types/vtexbr.assembly-options-graphql"
   },
   "dependencies": {
+    "@rooks/use-did-mount": "^4.11.2",
     "@vtex/admin-formik": "^0.4.1-next.0",
     "@vtex/admin-ui": "^0.117.1-next.1",
     "@vtex/styleguide": "^9.145.2",
@@ -20,6 +22,7 @@
     "formik": "^2.2.9",
     "react-apollo": "^3.1.5",
     "react-intl": "^5.21.0",
+    "uniqid": "^5.4.0",
     "yup": "^0.32.11"
   }
 }
