--- a/react/package.json
+++ b/react/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^16.8.6",
     "typescript": "3.9.7",
     "vtex.render-runtime": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.render-runtime@8.132.4/public/@types/vtex.render-runtime",
-    "vtexbr.assembly-options-graphql": "https://listassemblyoptions--wagnerlduarte.myvtex.com/_v/private/typings/linked/v1/vtexbr.assembly-options-graphql@0.0.5+build1648477222/public/@types/vtexbr.assembly-options-graphql"
+    "vtexbr.assembly-options-graphql": "http://vtexbr.vtexassets.com/_v/public/typings/v1/vtexbr.assembly-options-graphql@0.0.5/public/@types/vtexbr.assembly-options-graphql"
   },
   "dependencies": {
     "@vtex/admin-formik": "^0.4.1",
