--- a/react/package.json
+++ b/react/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "typescript": "3.9.7",
+    "vtex.admin-shell-utils": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.admin-shell-utils@0.6.0/public/@types/vtex.admin-shell-utils",
     "vtex.render-runtime": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.render-runtime@8.132.4/public/@types/vtex.render-runtime",
     "vtexbr.assembly-options-graphql": "http://vtexbr.vtexassets.com/_v/public/typings/v1/vtexbr.assembly-options-graphql@0.0.5/public/@types/vtexbr.assembly-options-graphql"
   },
