Adding the BillingOptions object

--- a/manifest.json
+++ b/manifest.json
@@ -17,5 +17,9 @@
     "admin": "0.x",
     "messages": "1.x"
   },
+  "billingOptions": {
+    "type": "free",
+    "availableCountries": ["*"]
+  },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
