--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,10 @@
   },
   "billingOptions": {
     "type": "free",
-    "availableCountries": ["*"]
+    "availableCountries": ["*"],
+    "support": { 
+      "url": "https://support.vtex.com/hc/requests"
+    }
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
