--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "admin-assembly-options",
   "vendor": "vtexbr",
-  "version": "0.11.2",
+  "version": "1.0.0",
   "title": "Assembly Options Functionality inside Admin",
   "description": "",
   "mustUpdateAt": "2022-08-28",
@@ -19,8 +19,10 @@
   },
   "billingOptions": {
     "type": "free",
-    "availableCountries": ["*"],
-    "support": { 
+    "availableCountries": [
+      "*"
+    ],
+    "support": {
       "url": "https://support.vtex.com/hc/requests"
     }
   },
