--- a/react/package.json
+++ b/react/package.json
@@ -11,9 +11,8 @@
     "react-dom": "^16.8.6",
     "typescript": "3.9.7",
     "vtex.admin-shell-utils": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.admin-shell-utils@0.6.0/public/@types/vtex.admin-shell-utils",
-    "vtex.assembly-options-graphql": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.assembly-options-graphql@1.0.0/public/@types/vtex.assembly-options-graphql",
-    "vtex.render-runtime": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.render-runtime@8.132.4/public/@types/vtex.render-runtime",
-    "vtexbr.admin-assembly-options": "http://vtexbr.vtexassets.com/_v/public/typings/v1/vtexbr.admin-assembly-options@0.11.1/public/@types/vtexbr.admin-assembly-options"
+    "vtex.assembly-options-graphql": "https://assembly7--sesnick.myvtex.com/_v/private/typings/linked/v1/vtex.assembly-options-graphql@1.0.0+build1651261085/public/@types/vtex.assembly-options-graphql",
+    "vtex.render-runtime": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.render-runtime@8.132.4/public/@types/vtex.render-runtime"
   },
   "dependencies": {
     "@rooks/use-did-mount": "^4.11.2",
