--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
   "builders": {
     "react": "3.x",
     "admin": "0.x",
-    "messages": "1.x"
+    "messages": "1.x",
+    "docs": "0.x"
   },
   "billingOptions": {
     "type": "free",
