--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "admin-assembly-options",
-  "vendor": "vtexbr",
+  "vendor": "vtex",
   "version": "2.0.0",
   "title": "Assembly Options Functionality inside Admin",
   "description": "",
